--- a/triggertemplate/trigger-template.yaml
+++ b/triggertemplate/trigger-template.yaml
@@ -23,3 +23,6 @@ spec:
         value: $(tt.params.gitrevision)
       pipelineRef:
         name: cat-branch-readme
+      workspaces:
+        - name: shared-data
+          emptyDir: {}
